k8s/deployments/web-dynamic/mariadb-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mariadb
  namespace: web-dynamic
  labels:
    app: web-dynamic
spec:
  selector:
    matchLabels:
      app: web-dynamic
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: web-dynamic
        tier: database
    spec:
      containers:
      - image: mariadb
        name: mariadb
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
          name: mariadb
        volumeMounts:
        - name: mariadb
          mountPath: /var/lib/mysql
      volumes:
      - name: mariadb
        persistentVolumeClaim:
          claimName: mariadb
