k8s/deployments/web-dynamic/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: web-dynamic
  labels:
    app: web-dynamic
spec:
  ports:
    - port: 3306
  selector:
    app: web-dynamic
    tier: database
  #clusterIP: None
